<resources>
    <string name="app_name">ThreadsApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_sign_you_in">Let’s sign you in</string>
    <string name="we_ve_missed_you">We’ve missed you</string>
    <string name="your_email">Your email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="login_with_google">Login with Google</string>
    <string name="dont_have_an_account_yet">Dont have an account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="enter_your_email_address_to_reset_password">Enter your email address to reset password</string>
    <string name="continue_btn">Continue</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="check_your_email_to_see_the_verification_code">Check your email to see the verification code</string>
    <string name="verify">Verify</string>
    <string name="send_again">Send again</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_account_to_start_using_threads">Create account to start using Threads</string>
    <string name="your_name">Your name</string>
    <string name="your_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="create_new_password">Create new password</string>
    <string name="your_new_password_must_be_different_from_previous_used_passwords">Your new password must be different from previous used passwords</string>
    <string name="name">Name</string>
    <string name="username">username</string>
    <string name="followers">followers</string>
    <string name="edit_profile">Edit profile</string>
    <string name="share_profile">Share profile</string>
    <string name="threads">Threads</string>
    <string name="Username">Username</string>
    <string name="write_username">+ Write username</string>
    <string name="Name">Name</string>
    <string name="write_name">+ Write name</string>
    <string name="bio">Bio</string>
    <string name="write_bio">+ Write bio</string>
    <string name="link">Link</string>
    <string name="write_link">+ Add link</string>
    <string name="private_profile">Private profile</string>
    <string name="done">Done</string>
    <string name="edit_photo">Edit photo</string>
    <string name="new_profile_picture">New profile picture</string>
    <string name="remove_current_picture">Remove current picture</string>
    <string name="copy_link">Copy link</string>
    <string name="share_via">Share via...</string>
    <string name="quote">Quote</string>
    <string name="remove">Remove</string>
    <string name="sort">Sort</string>
    <string name="cancel_all">Cancel all</string>
    <string name="quote1">When I look at you, I see someone who’s working hard</string>
    <string name="_2_replies">2 replies</string>
    <string name="_941_likes">941 likes</string>
    <string name="dot">•</string>
    <string name="_2h">2h</string>
    <string name="thread">Thread</string>
    <string name="reply">Reply</string>
    <string name="add_another_reply">Add another reply</string>
    <string name="anyone_can_reply">Anyone can reply</string>
    <string name="post">Post</string>
    <string name="reply_to_kayou">Reply to kayou...</string>
    <string name="thread_msg">Focusing is something impossible for people with ADHD</string>
    <string name="username_exapmle">malevicz</string>
    <string name="username_example">kayou</string>
    <string name="repost">Repost</string>
    <string name="new_thread">New Thread</string>
    <string name="search">Search</string>
    <string name="follow">Follow</string>
    <string name="incorrect_username">The username you entered doesn’t appear to belong to an account. Please check your username and try again.</string>
</resources>