<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.auth.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/login_msg"
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_sign_you_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_top" />

    <TextView
        android:id="@+id/login_msg_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/InfoTextStyle"
        android:text="@string/we_ve_missed_you"
        app:layout_constraintStart_toStartOf="@+id/login_msg"
        app:layout_constraintTop_toBottomOf="@+id/login_msg" />

    <EditText
        android:id="@+id/emailButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="37dp"
        android:padding="10dp"
        style="@style/EditTextStyle"
        android:hint="@string/your_email"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_msg_2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/passwordButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        style="@style/EditTextStyle"
        android:hint="@string/password"
        android:autofillHints="emailAddress"
        android:inputType="text"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailButton"
        tools:ignore="MissingConstraints,TextFields" />

    <ImageView
        android:id="@+id/eye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/eye"
        app:layout_constraintBottom_toBottomOf="@+id/passwordButton"
        app:layout_constraintEnd_toEndOf="@+id/passwordButton"
        app:layout_constraintTop_toTopOf="@+id/passwordButton"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/btn_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/forgot_password"
        android:textColor="#141414"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/passwordButton"
        app:layout_constraintTop_toBottomOf="@+id/passwordButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/profile_btn"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#C1C1C1"
        app:layout_constraintEnd_toEndOf="@+id/emailButton"
        app:layout_constraintStart_toStartOf="@+id/emailButton"
        app:layout_constraintTop_toBottomOf="@+id/btn_forgot_password"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_google"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/google_btn"
        android:drawableLeft="@drawable/google_icon"
        android:fontFamily="@font/sfbold"
        android:onClick="requestForGoogleAuth"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="Login with Google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or_msg" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_google"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_google"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/or_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/or"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/do_not_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfregular"
        android:text="@string/dont_have_an_account_yet"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintStart_toStartOf="@+id/sign_in_google" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/sign_up"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sfbold"
        app:layout_constraintBottom_toBottomOf="@+id/do_not_have_account"
        app:layout_constraintStart_toEndOf="@+id/do_not_have_account"
        app:layout_constraintTop_toTopOf="@+id/do_not_have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>