<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.registration.SignUpFragment">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/mdi_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/sfbold"
        android:text="@string/create_an_account"
        android:textColor="@color/primary"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_email_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/sfregular"
        android:text="@string/create_account_to_start_using_threads"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    <EditText
        android:id="@+id/btn_email"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:textColor="#999999"
        android:textSize="16sp"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_email_msg"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/btn_name"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:textColor="#999999"
        android:textSize="16sp"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_email"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/btn_password"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="#999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_name"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/btn_password_repeat"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#999999"
        android:textSize="16sp"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_password"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/primary"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="#C1C1C1"
        app:layout_constraintEnd_toEndOf="@+id/btn_email"
        app:layout_constraintStart_toStartOf="@+id/btn_email"
        app:layout_constraintTop_toBottomOf="@+id/btn_password_repeat"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/password_eye"
        android:layout_width="26dp"
        android:layout_height="23dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:src="@drawable/eye"
        app:layout_constraintBottom_toBottomOf="@+id/btn_password"
        app:layout_constraintEnd_toEndOf="@+id/btn_password"
        app:layout_constraintTop_toTopOf="@+id/btn_password" />

    <ImageView
        android:id="@+id/password_eye2"
        android:layout_width="26dp"
        android:layout_height="23dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:src="@drawable/eye"
        app:layout_constraintBottom_toBottomOf="@+id/btn_password_repeat"
        app:layout_constraintEnd_toEndOf="@+id/btn_password_repeat"
        app:layout_constraintTop_toTopOf="@+id/btn_password_repeat" />

</androidx.constraintlayout.widget.ConstraintLayout>